--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,55 @@ permalink: /teaching/
 author_profile: true
 ---
 
-{% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+<div style="text-align: justify; text-justify: inter-word; line-height: 1.6;">
+
+  <h2 style="border-bottom: 2px solid #3498db; padding-bottom: 10px;">
+    <i class="fas fa-book-reader" style="color: #3498db;"></i> Subject Lectures
+  </h2>
+  <ul style="list-style: none; padding-left: 0;">
+    <li style="margin-bottom: 20px; padding: 12px; border-bottom: 1px dashed #555;">
+      <strong style="color: #3498db; font-size: 1.15em;">EE4007 – Advanced Power Electronics</strong>
+      <span style="float: right; font-weight: bold;">2023 - 2025</span>
+      <br><em>Subject Lecturer | Department of Electrical and Electronic Engineering, PolyU</em>
+      <br><small>Focusing on advanced converter topologies, high-frequency magnetic design, and the application of wide-bandgap (SiC/GaN) semiconductors.</small>
+    </li>
+
+    <li style="margin-bottom: 20px; padding: 12px; border-bottom: 1px dashed #555;">
+      <strong style="color: #3498db; font-size: 1.15em;">EIE3305 – Integrated Analogue and Digital Circuits</strong>
+      <span style="float: right; font-weight: bold;">2023 - 2024</span>
+      <br><em>Subject Lecturer | Department of Electrical and Electronic Engineering, PolyU</em>
+      <br><small>Covering the principles of circuit integration, feedback control, and the practical implementation of mixed-signal systems.</small>
+    </li>
+  </ul>
+
+  <h2 style="border-bottom: 2px solid #3498db; padding-bottom: 10px; margin-top: 40px;">
+    <i class="fas fa-users" style="color: #3498db;"></i> Research Supervision
+  </h2>
+  <ul style="list-style: none; padding-left: 0;">
+    <li style="margin-bottom: 20px; padding: 12px; border-bottom: 1px dashed #555;">
+      <strong style="color: #3498db; font-size: 1.1em;">Master of Science (MSc) Dissertation Supervisor</strong>
+      <span style="float: right;">2023 - 2024</span>
+      <br><em>Department of Electrical and Electronic Engineering, PolyU</em>
+      <br><small>Mentoring MSc students in deep-dive research into specialized power electronics architectures and energy management systems.</small>
+    </li>
+
+    <li style="margin-bottom: 20px; padding: 12px; border-bottom: 1px dashed #555;">
+      <strong style="color: #3498db; font-size: 1.1em;">Undergraduate Final Year Project (FYP) Supervisor</strong>
+      <span style="float: right;">2023 - 2024</span>
+      <br><em>Department of Electrical and Electronic Engineering, PolyU</em>
+      <br><small>Guiding students through the full engineering lifecycle: from theoretical analysis and simulation to hardware prototyping and experimental verification.</small>
+    </li>
+  </ul>
+
+  <h2 style="border-bottom: 2px solid #3498db; padding-bottom: 10px; margin-top: 40px;">
+    <i class="fas fa-history" style="color: #3498db;"></i> Earlier Teaching Contributions
+  </h2>
+  <ul style="list-style: none; padding-left: 0;">
+    <li style="margin-bottom: 10px; padding: 5px 10px;">
+      <strong>Graduate Teaching Assistant</strong> 
+      <br><small>The Hong Kong Polytechnic University | 2013 – 2016</small>
+    </li>
+  </ul>
+
+</div>
