update the tag of publication

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -36,6 +36,7 @@ author_profile: true
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / TPEL</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Energy Harvesting</span>
+         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Electrified Transportation</span>
       </div>
     </li>
 
@@ -44,6 +45,7 @@ author_profile: true
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / TPEL</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">SiC</span>
+         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Gate Oxide Degradation</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Reliability</span>
       </div>
     </li>
@@ -52,7 +54,8 @@ author_profile: true
       <strong>Y. Zhang</strong>, <strong>Junwei Liu</strong>, et al. "Multi-degree-of-freedom decoupled mechanism for improving energy harvesting performance of wave energy converter," <em>Energy Conversion and Management</em>, 2025.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / ECM</span>
-        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">IF: 9.9</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Energy Harvesting</span>
+         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Wave Energy Converter</span>
       </div>
     </li>
 
@@ -69,6 +72,7 @@ author_profile: true
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / TIE</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">WPT</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;"> Bidirectional Converters</span>
       </div>
     </li>
 
@@ -78,6 +82,7 @@ author_profile: true
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / TPEL</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Three-Phase</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">PFC</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Integrated</span>
       </div>
     </li>
 
@@ -86,6 +91,7 @@ author_profile: true
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / TIE</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">WPT</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Compact COnverter</span>
       </div>
     </li>
 
@@ -94,7 +100,7 @@ author_profile: true
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / TPEL</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">V2G</span>
-        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">SST Concept</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">SWISS-Rectifier</span>
       </div>
     </li>
 
@@ -103,6 +109,7 @@ author_profile: true
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / TIE</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">DAB</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">ZVS</span>
       </div>
     </li>
 
@@ -111,6 +118,9 @@ author_profile: true
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / TPEL</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Bidirectional</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">AC/DC</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">PFC</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Soft-Switching</span>
       </div>
     </li>
 
@@ -118,7 +128,8 @@ author_profile: true
       <strong>Junwei Liu</strong>, G. Wang, et al. "A Parameter Identification Approach with Primary-Side Measurement for DC-DC Wireless-Power-Transfer Converters," <em>IEEE Transactions on Transportation Electrification</em>, 2021.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / TTE</span>
-        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Parameter ID</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Parameter Identification</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">DC/DC</span>
       </div>
     </li>
 
@@ -127,6 +138,7 @@ author_profile: true
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / JESTPE</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Three-Phase</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">PFC</span>
       </div>
     </li>
 
@@ -134,7 +146,7 @@ author_profile: true
       <strong>Junwei Liu</strong>, et al. "Single-Stage Wireless-Power-Transfer Resonant Converter with Boost Bridgeless PFC Rectifier," <em>IEEE Transactions on Industrial Electronics</em>, 2018.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / TIE</span>
-        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Classic</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Bridgeless</span>
       </div>
     </li>
     
@@ -148,7 +160,9 @@ author_profile: true
       <strong>Junwei Liu*</strong>, et al. "Medium-Voltage Single-Stage Solid-State Transformer Based Fast Charger for Electric Vehicles," <em>IEEE ITEC</em>, 2025.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">ITEC 2025</span>
-        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">MV SST</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">SST</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">EV</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Medium Voltage</span>
       </div>
     </li>
 
@@ -157,6 +171,8 @@ author_profile: true
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">ECCE 2025</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Gate Driver</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Medium Voltage</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">PCB Coupler</span>
       </div>
     </li>
 
@@ -164,6 +180,8 @@ author_profile: true
       <strong>Junwei Liu</strong>, et al. "A Soft-Switched Bidirectional Single-Phase Single-Stage AC-DC Isolated Converter," <em>IEEE ECCE</em>, 2024.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">ECCE 2024</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Bidirectional Converter</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Soft Switching</span>
       </div>
     </li>
 
@@ -171,6 +189,7 @@ author_profile: true
       <strong>M. T. Faiz</strong>, <strong>Junwei Liu</strong>, et al. "Exploring the Potential of EV Motor Winding in LCL Filter Design for On-Board Chargers," <em>EPE’23 ECCE Europe</em>, 2023.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">ECCE Europe</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">EV</span>
       </div>
     </li>
   </ul>
