update the project(add the academic activity.) publication (add the Conference paper),

--- a/_pages/project.html
+++ b/_pages/project.html
@@ -39,13 +39,13 @@ author_profile: true
     </li>
 
     <li style="margin-bottom: 25px; padding: 15px; border-bottom: 1px dashed #555;">
-      <strong style="font-size: 1.15em;">A Compact and Battery-Friendly Dynamic Wireless Electric Vehicle Charging Infrastructure with Flat Hub Profile</strong>
+      <strong style="font-size: 1.15em;">A Compact and Battery-Friendly Dynamic Wireless Electric Vehicle Charging Infrastructure with Flat Charging Power ProfileHub Profile</strong>
       <span style="float: right; font-weight: bold; color: #2ecc71;">HK$ 2.00M</span>
       <br><small><em>PI | HK ITF-ITSP (ITF/2018/24P) | 2025 – 2026</em></small>
     </li>
 
     <li style="margin-bottom: 25px; padding: 15px; border-bottom: 1px dashed #555;">
-      <strong style="font-size: 1.15em;">Research Talent Hub (RTH) Grants</strong>
+      <strong style="font-size: 1.15em;">ITF-Research Talent Hub (RTH) Grants</strong>
       <span style="float: right; font-weight: bold; color: #2ecc71;">HK$ 2.55M</span>
       <br><small><em>PI | HK ITF (PIH/420/24, PIH/421/24, PIH/095/25, PIH/161/25) | 2024 – 2026</em></small>
     </li>
@@ -81,12 +81,12 @@ author_profile: true
   </h2>
   <ul style="list-style: none; padding-left: 0;">
     <li style="margin-bottom: 15px; padding: 10px; border-bottom: 1px dashed #555;">
-      <strong>Electromagnetic Energy Harvesting System for MTR Monitoring Systems</strong>
+      <strong>Developing an Electromagnetic Energy Harvesting System for MTR Monitoring Systems</strong>
       <span style="float: right; font-weight: bold;">HK$ 1.09M</span>
       <br><small><em>Co-I | HK MTR Research Fund (PTU-23024) | 2025 – 2028</em></small>
     </li>
     <li style="margin-bottom: 15px; padding: 10px;">
-      <strong>Dual Charge Path Enhanced Wave Energy Harvester for Offshore Wireless Power</strong>
+      <strong>Developing a Dual Charge Path Enhanced Wave Energy Harvester for Offshore Wireless Power</strong>
       <span style="float: right; font-weight: bold;">HK$ 870k</span>
       <br><small><em>Co-I | HK RGC GRF (15207125) | 2026 – 2028</em></small>
     </li>
@@ -104,9 +104,9 @@ author_profile: true
     </li>
     <li style="margin-bottom: 15px; padding: 10px; border-radius: 5px; background-color: rgba(241, 196, 15, 0.1);">
       <span style="background-color: #f1c40f; color: #000; padding: 2px 8px; border-radius: 4px; font-size: 0.8em; font-weight: bold;">SHORTLISTED</span>
-      <strong style="margin-left: 10px;">Optimal Collaborative Efficiency Operation of Renewable Networks & 5G Clusters</strong>
+      <strong style="margin-left: 10px;">Research on Optimal Collaborative Efficiency Operation of Renewable Networks & 5G Clusters</strong>
       <span style="float: right; font-weight: bold;">HK$ 1.25M</span>
-      <br><small><em>Co-I | NSFC/RGC-JRS (N_PolyU592/25) | 2026 – 2029</em></small>
+      <br><small><em>Co-I | NSFC/RGC-JRS (N_PolyU 592/25) | 2026 – 2029</em></small>
     </li>
   </ul>
 
@@ -115,16 +115,16 @@ author_profile: true
   </h2>
   <ul style="list-style: none; padding-left: 0;">
     <li style="margin-bottom: 10px;">
-      <i class="fas fa-check-circle" style="color: #3498db; font-size: 0.8em;"></i> <strong>High-Power-Density On-Board EV Charger (SiC)</strong> | <small>ITF-TMRP (HK$ 6.58M)</small>
+      <i class="fas fa-check-circle" style="color: #3498db; font-size: 0.8em;"></i> <strong>High-Power-Density High-Efficiency On-Board EV Charger Based on Thermally Enhanced SiC Power Module and Advanced Power Conversion Technologies</strong> | <small>ITF-TMRP (HK$ 6.58M)</small>
     </li>
     <li style="margin-bottom: 10px;">
-      <i class="fas fa-check-circle" style="color: #3498db; font-size: 0.8em;"></i> <strong>Intelligent Ultra-fast Charging Station at PolyU</strong> | <small>PolyU Fund (HK$ 2.00M)</small>
+      <i class="fas fa-check-circle" style="color: #3498db; font-size: 0.8em;"></i> <strong>An Intelligent Ultra-fast Charging Station at PolyU</strong> | <small>PolyU Fund (HK$ 2.00M)</small>
     </li>
     <li style="margin-bottom: 10px;">
-      <i class="fas fa-check-circle" style="color: #3498db; font-size: 0.8em;"></i> <strong>100kW Integrated PEV/PHEV Converter</strong> | <small>ITF-ITSP (HK$ 4.09M)</small>
+      <i class="fas fa-check-circle" style="color: #3498db; font-size: 0.8em;"></i> <strong>Development of a Compact and Low Cost 100 kW Integrated PFC/PWM Converter for EV Quick Charger</strong> | <small>ITF-ITSP (HK$ 4.09M)</small>
     </li>
     <li style="margin-bottom: 10px;">
-      <i class="fas fa-check-circle" style="color: #3498db; font-size: 0.8em;"></i> <strong>Research on High Efficient Medium Wireless Charging</strong> | <small>ITF-ITSP (HK$ 2.75M)</small>
+      <i class="fas fa-check-circle" style="color: #3498db; font-size: 0.8em;"></i> <strong>Research and Development of High Efficient Medium Wireless Charging System</strong> | <small>ITF-ITSP (HK$ 2.75M)</small>
     </li>
   </ul>
 
