--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -15,15 +15,13 @@ author_profile: true
     <li style="margin-bottom: 20px; padding: 12px; border-bottom: 1px dashed #555;">
       <strong style="color: #3498db; font-size: 1.15em;">EE4007 – Advanced Power Electronics</strong>
       <span style="float: right; font-weight: bold;">2023 - 2025</span>
-      <br><em>Subject Lecturer | Department of Electrical and Electronic Engineering, PolyU</em>
-      <br><small>Focusing on advanced converter topologies, high-frequency magnetic design, and the application of wide-bandgap (SiC/GaN) semiconductors.</small>
+      <br><em>Department of Electrical and Electronic Engineering, PolyU</em>
     </li>
 
     <li style="margin-bottom: 20px; padding: 12px; border-bottom: 1px dashed #555;">
       <strong style="color: #3498db; font-size: 1.15em;">EIE3305 – Integrated Analogue and Digital Circuits</strong>
       <span style="float: right; font-weight: bold;">2023 - 2024</span>
-      <br><em>Subject Lecturer | Department of Electrical and Electronic Engineering, PolyU</em>
-      <br><small>Covering the principles of circuit integration, feedback control, and the practical implementation of mixed-signal systems.</small>
+      <br><em>Department of Electrical and Electronic Engineering, PolyU</em>
     </li>
   </ul>
 
@@ -34,15 +32,13 @@ author_profile: true
     <li style="margin-bottom: 20px; padding: 12px; border-bottom: 1px dashed #555;">
       <strong style="color: #3498db; font-size: 1.1em;">Master of Science (MSc) Dissertation Supervisor</strong>
       <span style="float: right;">2023 - 2024</span>
-      <br><em>Department of Electrical and Electronic Engineering, PolyU</em>
-      <br><small>Mentoring MSc students in deep-dive research into specialized power electronics architectures and energy management systems.</small>
+      <br><em>Department of Electrical and Electronic Engineering, PolyU</em><br>
     </li>
 
     <li style="margin-bottom: 20px; padding: 12px; border-bottom: 1px dashed #555;">
       <strong style="color: #3498db; font-size: 1.1em;">Undergraduate Final Year Project (FYP) Supervisor</strong>
       <span style="float: right;">2023 - 2024</span>
-      <br><em>Department of Electrical and Electronic Engineering, PolyU</em>
-      <br><small>Guiding students through the full engineering lifecycle: from theoretical analysis and simulation to hardware prototyping and experimental verification.</small>
+      <br><em>Department of Electrical and Electronic Engineering, PolyU</em><br>
     </li>
   </ul>
 
