--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -77,7 +77,7 @@ author_profile: true
     </li>
 
     <li style="margin-bottom: 25px;">
-      <strong>Junwei Liu</strong>, C. S. Wong, et al. "An Integrated Three-Phase AC-DC Wireless-Power-Transfer Converter with Active Power Factor Correction Using Three Transmitter Coils," <em>IEEE Transactions on Power Electronics</em>, 2023.
+      <strong>Junwei Liu</strong>, C. S. Wong, et al. "An Integrated Three-Phase AC-DC Wireless-Power-Transfer Converter With Active Power Factor Correction Using Three Transmitter Coils," <em>IEEE Transactions on Power Electronics</em>, 2023.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / TPEL</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Three-Phase</span>
@@ -96,7 +96,7 @@ author_profile: true
     </li>
 
     <li style="margin-bottom: 25px;">
-      <strong>C. S. Wong</strong>, <strong>Junwei Liu*</strong>, et al. "A SWISS-Rectifier-Based Single-Stage Three-Phase Bidirectional AC-DC Inductive-Power-Transfer Converter for V2G Applications," <em>IEEE Transactions on Power Electronics</em>, 2023.
+      <strong>C. S. Wong</strong>, <strong>Junwei Liu*</strong>, et al. "A SWISS-Rectifier-Based Single-Stage Three-Phase Bidirectional AC-DC Inductive-Power-Transfer Converter for Vehicle-to-Grid Applications," <em>IEEE Transactions on Power Electronics</em>, 2023.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / TPEL</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">V2G</span>
@@ -114,7 +114,7 @@ author_profile: true
     </li>
 
     <li style="margin-bottom: 25px;">
-      <strong>Junwei Liu</strong>, F. Xu, C. Sun and K. H. Loo. "A Soft-Switched Power-Factor-Corrected Single-Phase Bidirectional AC-DC Wireless Power Transfer Converter with an Integrated Power Stage," <em>IEEE Transactions on Power Electronics</em>, 2022.
+      <strong>Junwei Liu</strong>, F. Xu, C. Sun and K. H. Loo. "A Soft-Switched Power-Factor-Corrected Single-Phase Bidirectional AC-DC Wireless Power Transfer Converter With an Integrated Power Stage," <em>IEEE Transactions on Power Electronics</em>, 2022.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / TPEL</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Bidirectional</span>
@@ -125,7 +125,7 @@ author_profile: true
     </li>
 
     <li style="margin-bottom: 25px;">
-      <strong>Junwei Liu</strong>, G. Wang, et al. "A Parameter Identification Approach with Primary-Side Measurement for DC-DC Wireless-Power-Transfer Converters," <em>IEEE Transactions on Transportation Electrification</em>, 2021.
+      <strong>Junwei Liu</strong>, G. Wang, et al. "A Parameter Identification Approach With Primary-Side Measurement for DC-DC Wireless-Power-Transfer Converters With Different Resonant Tank Topologies," <em>IEEE Transactions on Transportation Electrification</em>, 2021.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / TTE</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Parameter Identification</span>
@@ -134,7 +134,7 @@ author_profile: true
     </li>
 
     <li style="margin-bottom: 25px;">
-      <strong>Junwei Liu</strong>, et al. "A Three-Phase Single-Stage AC-DC Wireless-Power-Transfer Converter with Power Factor Correction," <em>IEEE JESTPE</em>, 2020.
+      <strong>Junwei Liu</strong>, et al. "A Three-Phase Single-Stage AC-DC Wireless-Power-Transfer Converter With Power Factor Correction," <em>IEEE JESTPE</em>, 2020.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / JESTPE</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Three-Phase</span>
@@ -143,7 +143,7 @@ author_profile: true
     </li>
 
     <li style="margin-bottom: 25px;">
-      <strong>Junwei Liu</strong>, et al. "Single-Stage Wireless-Power-Transfer Resonant Converter with Boost Bridgeless PFC Rectifier," <em>IEEE Transactions on Industrial Electronics</em>, 2018.
+      <strong>Junwei Liu</strong>, et al. "Single-Stage Wireless-Power-Transfer Resonant Converter with Boost Bridgeless Power-Factor-Correction Rectifier," <em>IEEE Transactions on Industrial Electronics</em>, 2018.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">Q1 / TIE</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Bridgeless</span>
@@ -157,6 +157,25 @@ author_profile: true
    <ul style="list-style: none; padding-left: 0;">
 
     <li style="margin-bottom: 25px;">
+      <strong>Junwei Liu*</strong>, W.Xu et al. "A Novel Signal-Power-Integrated Gate Driver for Medium Voltage Solid-State Transformers," <em>IEEE APEC, 2026 (Acceptted, ID:2375)</em>, 2026.
+      <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">APEC 2026</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Gate Driver</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">SST</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Medium Voltage</span>
+      </div>
+    </li>
+
+    <li style="margin-bottom: 25px;">
+      <strong>H. Wang, Junwei Liu*</strong>, et al. "Online Full ZVS Optimization for Modular-Multilevel-Active Bridge Converter in MV PET," <em>IEEE APEC, 2026 (Acceptted, ID:2263)</em>, 2026.
+      <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">APEC 2026</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">MMC</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">ZVS</span>
+      </div>
+    </li>
+
+    <li style="margin-bottom: 25px;">
       <strong>Junwei Liu*</strong>, et al. "Medium-Voltage Single-Stage Solid-State Transformer Based Fast Charger for Electric Vehicles," <em>IEEE ITEC</em>, 2025.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">ITEC 2025</span>
@@ -166,8 +185,17 @@ author_profile: true
       </div>
     </li>
 
+   <li style="margin-bottom: 25px;">
+      <strong>T. Chen</strong>, <strong>Junwei Liu*</strong>, et al. "An H-Bridge-Mutiplexed Single-Stage Isolated AC-DC Converter with a Fifth-Order Resonant Tank
+      <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">ECCE 2025</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">AC/DC</span>
+        <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">H-Bridge</span>
+      </div>
+    </li>
+
     <li style="margin-bottom: 25px;">
-      <strong>W. Xu</strong>, <strong>Junwei Liu*</strong>, et al. "Concentric Circular Coil-Based Coreless PCB Coupler for Medium Voltage Gate Drivers," <em>IEEE ECCE</em>, 2025.
+      <strong>W. Xu</strong>, <strong>Junwei Liu*</strong>, et al. "Concentric Circular Coil-Based Coreless PCB Coupler for Medium Voltage Gate Drivers With an Ultra Low Parasitic Capacitance," <em>IEEE ECCE</em>, 2025.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">ECCE 2025</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Gate Driver</span>
@@ -177,7 +205,7 @@ author_profile: true
     </li>
 
     <li style="margin-bottom: 25px;">
-      <strong>Junwei Liu</strong>, et al. "A Soft-Switched Bidirectional Single-Phase Single-Stage AC-DC Isolated Converter," <em>IEEE ECCE</em>, 2024.
+      <strong>Junwei Liu</strong>, et al. "A Soft-Switched Bidirectional Single-Phase Single-Stage AC-DC Isolated Converter with Active Power Factor Correction and Reduced Power Device Count," <em>IEEE ECCE</em>, 2024.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">ECCE 2024</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Bidirectional Converter</span>
@@ -204,7 +232,7 @@ author_profile: true
         "Designing Robust Control Loops for LCL Filtered Motor-Integrated EV On-Board Chargers," <em>IEEE TTE</em>, Under Review.
         </li>
         <li style="margin-bottom: 20px;">
-        "Design of High-Power Density Cantilever Beam Electromagnetic Energy Harvesters with Core and Coil Optimization for Transportation Sensors." <em>IEEE TPEL</em>, Under Review.
+        "Design of High-Power Density Cantilever Beam Electromagnetic Energy Harvesters With Core and Coil Optimization for Transportation Sensors." <em>IEEE TPEL</em>, Under Review.
         </li>
     </ul>
 
