--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -205,7 +205,7 @@ author_profile: true
     </li>
 
     <li style="margin-bottom: 25px;">
-      <strong>Junwei Liu</strong>, et al. "A Soft-Switched Bidirectional Single-Phase Single-Stage AC-DC Isolated Converter with Active Power Factor Correction and Reduced Power Device Count," <em>IEEE ECCE</em>, 2024.
+      <strong>Junwei Liu*</strong>, et al. "A Soft-Switched Bidirectional Single-Phase Single-Stage AC-DC Isolated Converter with Active Power Factor Correction and Reduced Power Device Count," <em>IEEE ECCE</em>, 2024.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">ECCE 2024</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">Bidirectional Converter</span>
@@ -214,7 +214,7 @@ author_profile: true
     </li>
 
     <li style="margin-bottom: 25px;">
-      <strong>M. T. Faiz</strong>, <strong>Junwei Liu</strong>, et al. "Exploring the Potential of EV Motor Winding in LCL Filter Design for On-Board Chargers," <em>EPE’23 ECCE Europe</em>, 2023.
+      <strong>M. T. Faiz</strong>, <strong>Junwei Liu*</strong>, et al. "Exploring the Potential of EV Motor Winding in LCL Filter Design for On-Board Chargers," <em>EPE’23 ECCE Europe</em>, 2023.
       <div style="margin-top: 8px; display: flex; gap: 8px; flex-wrap: wrap;">
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; font-weight: bold; padding: 2px 8px; border-radius: 3px;">ECCE Europe</span>
         <span style="background-color: rgba(52, 152, 219, 0.1); color: #3498db; font-size: 0.75em; padding: 2px 8px; border-radius: 3px;">EV</span>
