fix some teaching and publication details

--- a/_pages/project.html
+++ b/_pages/project.html
@@ -121,10 +121,10 @@ author_profile: true
       <i class="fas fa-check-circle" style="color: #3498db; font-size: 0.8em;"></i> <strong>An Intelligent Ultra-fast Charging Station at PolyU</strong> | <small>PolyU Fund (HK$ 2.00M)</small>
     </li>
     <li style="margin-bottom: 10px;">
-      <i class="fas fa-check-circle" style="color: #3498db; font-size: 0.8em;"></i> <strong>Development of a Compact and Low Cost 100 kW Integrated PFC/PWM Converter for EV Quick Charger</strong> | <small>ITF-ITSP (HK$ 4.09M)</small>
+      <i class="fas fa-check-circle" style="color: #3498db; font-size: 0.8em;"></i> <strong>Compact and Low Cost 100 kW Integrated PFC/PWM Converter for EV Quick Charger</strong> | <small>ITF-ITSP (HK$ 4.09M)</small>
     </li>
     <li style="margin-bottom: 10px;">
-      <i class="fas fa-check-circle" style="color: #3498db; font-size: 0.8em;"></i> <strong>Research and Development of High Efficient Medium Wireless Charging System</strong> | <small>ITF-ITSP (HK$ 2.75M)</small>
+      <i class="fas fa-check-circle" style="color: #3498db; font-size: 0.8em;"></i> <strong>High Efficient Medium Wireless Charging System</strong> | <small>ITF-ITSP (HK$ 2.75M)</small>
     </li>
   </ul>
 
