--- a/_pages/team.html
+++ b/_pages/team.html
@@ -91,7 +91,7 @@ author_profile: true
 
     <div class="member">
         <span class="name">LIU YICHENG</span>
-        <span class="info">Ph.D. student (2026 - Now )</span>
+        <span class="info">Ph.D. student (Ongoing) </span>
         <span class="info">B.S., Hong Kong Polytechnic University (2022-2026)</span>
         <span class="info">Research interests:  power converters</span>
     </div>
